--- a/Gentlemen's Game.html
+++ b/Gentlemen's Game.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gentlemen's Game</title>
   <link rel="shortcut icon" href="tutu.ico" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <p><h1><u>History of cricket</u></h1><p>
